# neural-nets

./: CMakeLists.txt
include/: matrix.h
src/: main.c  matrix.c
